@@ -3,23 +3,23 @@ package classes;
 import java.awt.*;
 import java.io.*;
 import java.net.URL;
-import java.net.URLClassLoader;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.*;
+import java.nio.file.attribute.BasicFileAttributes;
 import java.util.*;
-import java.util.prefs.BackingStoreException;
 import java.util.prefs.Preferences;
 
 public class Settings {
     private static final String constantsName = "constants";
+    private static final String constantsDescriptionName = "constants_description";
     private static final String dictionaryName = "localization";
 
     private static final String userPath = "USER_PATH";
 
-    private static final String userPathConstants = File.pathSeparator + constantsName + ".properties";
-    private static final String userPathDictionary = File.pathSeparator + dictionaryName + ".properties";
+    private static final String userPathDir = "PrimaConfigurationFolder";
+    private static final String userPathConstants = File.separator + userPathDir + File.separator + constantsName + ".properties";
+    private static final String userPathDictionary = File.separator + userPathDir + File.separator + dictionaryName + ".properties";
 
     private HashMap<String, Long> constants;
     private HashMap<String, String> dictionary;
@@ -41,11 +41,13 @@ public class Settings {
             String pathToUserConstants = prefs.get(userPath, "");
             if (!pathToUserConstants.equals("")) {
                 Log.in().say("Loading user defined constants:");
-                ClassLoader loader = new URLClassLoader(new URL[] {new File(pathToUserConstants + userPathConstants).toURI().toURL()});
-                constantsBundle = ResourceBundle.getBundle(constantsName, Locale.getDefault(), loader, new UTF16Control());
-                for (String key: constantsBundle.keySet()) {
-                    Log.in().beg("\t").say(key, " -> ", constantsBundle.getString(key));
-                    if (constants.containsKey(key)) constants.put(key, Long.decode(constantsBundle.getString(key)));
+                Properties prop = new Properties();
+                if (Files.exists(Paths.get(pathToUserConstants + userPathConstants)))
+                    prop.load(new InputStreamReader(new FileInputStream(pathToUserConstants + userPathConstants), StandardCharsets.UTF_16));
+                else Log.in().say("File exists, but empty!");
+                for (Object key: prop.keySet()) {
+                    Log.in().beg("\t").say(key, " -> ", prop.get(key.toString()).toString());
+                    if (constants.containsKey(key.toString())) constants.put(key.toString(), Long.decode(prop.get(key.toString()).toString()));
                 }
             }
         } catch (Exception e) {
@@ -74,11 +76,13 @@ public class Settings {
             String pathToUserDictionary = prefs.get(userPath, "");
             if (!pathToUserDictionary.equals("")) {
                 Log.in().say("Loading user defined localization:");
-                ClassLoader loader = new URLClassLoader(new URL[] {new File(pathToUserDictionary + userPathDictionary).toURI().toURL()});
-                ResourceBundle dictionaryBundle = ResourceBundle.getBundle(dictionaryName, Locale.getDefault(), loader, new UTF16Control());
-                for (String key: dictionaryBundle.keySet()) {
-                    Log.in().beg("\t").say(key, " -> ", dictionaryBundle.getString(key));
-                    if (dictionary.containsKey(key)) dictionary.put(key, dictionaryBundle.getString(key));
+                Properties prop = new Properties();
+                if (Files.exists(Paths.get(pathToUserDictionary + userPathDictionary)))
+                    prop.load(new InputStreamReader(new FileInputStream(pathToUserDictionary + userPathDictionary), StandardCharsets.UTF_16));
+                else Log.in().say("File exists, but empty!");
+                for (Object key: prop.keySet()) {
+                    Log.in().beg("\t").say(key, " -> ", prop.get(key).toString());
+                    if (dictionary.containsKey(key.toString())) dictionary.put(key.toString(), prop.get(key).toString());
                 }
             }
         } catch (Exception e) {
@@ -127,7 +131,7 @@ public class Settings {
 
 
 
-    public static void changeLocalization(int localePosition) {
+    public static void changeLocalization(int localePosition) { // TODO: thread?
         if (localePosition == 0) get().initializeUserDictionary();
         else get().initializeDictionary(Locale.forLanguageTag(locales[localePosition]));
     }
@@ -140,7 +144,9 @@ public class Settings {
             prefs.put(userPath, path);
             prefs.sync();
             prefs.flush();
-        } catch (BackingStoreException e) {
+
+            Files.createDirectory(Paths.get(path + File.separator + userPathDir));
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
@@ -148,36 +154,49 @@ public class Settings {
     public static void removeUserPath() {
         try {
             Preferences prefs = Preferences.userNodeForPackage(Prima.class);
+            String path = prefs.get(userPath, "");
+            if (!path.equals("")) Files.walkFileTree(Paths.get(path + File.separator + userPathDir), new SimpleFileVisitor<Path>() {
+                @Override
+                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+                    Files.delete(file);
+                    return FileVisitResult.CONTINUE;
+                }
+
+                @Override
+                public FileVisitResult postVisitDirectory(Path dir, IOException exc) throws IOException {
+                    Files.delete(dir);
+                    return FileVisitResult.CONTINUE;
+                }
+            });
+
             prefs.clear();
             prefs.removeNode();
-        } catch (BackingStoreException e) {
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
     public static boolean isUserPathSet() {
         Preferences prefs = Preferences.userNodeForPackage(Prima.class);
-        return prefs.get(userPath, "").equals("");
+        return !prefs.get(userPath, "").equals("");
     }
 
 
 
-    public static boolean alterLocalization(String name) {
+    public static void alterLocalization(String name) { // TODO: thread?
         try {
             Preferences prefs = Preferences.userNodeForPackage(Prima.class);
             String pathToUserDictionary = prefs.get(userPath, "");
             if (!pathToUserDictionary.equals("")) {
-                Files.copy(Path.of(name), Path.of(pathToUserDictionary + userPathDictionary));
+                Files.copy(Paths.get(name), Paths.get(pathToUserDictionary + userPathDictionary));
             }
             changeLocalization(0);
-            return true;
         } catch (IOException e) {
             e.printStackTrace();
-            return false;
         }
     }
 
-    public static boolean alterParameter(String name, long value) {
+    public static void alterParameter(String name, long value) { // TODO: thread?
         if (get().constants.containsKey(name)) {
             get().constants.put(name, value);
 
@@ -186,16 +205,28 @@ public class Settings {
             if (!pathToUserConstants.equals("")) {
                 try {
                     Properties prop = new Properties();
-                    prop.load(new InputStreamReader(get().getClass().getResourceAsStream(pathToUserConstants + userPathConstants), StandardCharsets.UTF_16));
+                    if (Files.exists(Paths.get(pathToUserConstants + userPathConstants)))
+                        prop.load(new InputStreamReader(new FileInputStream(pathToUserConstants + userPathConstants), StandardCharsets.UTF_16));
                     prop.setProperty(name, String.valueOf(value));
-                    prop.store(new FileOutputStream(pathToUserConstants + userPathConstants), null);
+                    prop.store(new OutputStreamWriter(new FileOutputStream(pathToUserConstants + userPathConstants), StandardCharsets.UTF_16), null);
                 } catch (IOException e) {
                     e.printStackTrace();
                 }
             }
+        } else {
+            // LOg
+        }
+    }
 
-            return true;
-        } else return false;
+    public static HashMap<String, String> getConstantsDescription() {
+        Log.in().say("Loading constants description from file ", constantsDescriptionName, ":");
+        ResourceBundle constantsBundle = ResourceBundle.getBundle(constantsDescriptionName, new UTF16Control());
+        HashMap<String, String> constantsDescription = new HashMap<>(constantsBundle.keySet().size());
+        for (String key: constantsBundle.keySet()) {
+            Log.in().beg("\t").say(key, " -> ", constantsBundle.getString(key));
+            constantsDescription.put(key, constantsBundle.getString(key));
+        }
+        return constantsDescription;
     }
 
 
